# ModularSensorSystem

./: .gitignore  ATTRIBUTIONS.md  AtmosphericSensorSystem.sln  CMakeLists.txt  CMakeUserPresets.json  ModularSensorSystem.sln  README.md  naming_conventions.md  vcpkg.json
src/app/: CMakeLists.txt  MSSFrontend.vcxproj  MSSFrontend.vcxproj.filters  MainWindow.qrc  main.cpp  main.qml
src/app/MSSFrontendQML/: MSSFrontendQML.vcxproj  MSSFrontendQML.vcxproj.filters  main.cpp  main.qml  qml.qrc
src/app/MSSFrontendQML/components/: CustomTitleBar.qml  PresetsWidget.qml  ProcessorsWidget.qml  SourcePreviewWidget.qml  qmldir
src/app/MSSFrontendQML/dialogs/: AddProcessorDialog.qml  SessionPropertiesDialog.qml  qmldir
src/app/MSSFrontendQML/pages/: MainPage.qml  qmldir
src/app/actions/: CMakeLists.txt  PluginsActions.qml  PresetsActions.qml  ProcessorsActions.qml  SessionActions.qml  SourcesActions.qml
src/app/components/: CMakeLists.txt  CustomTitleBar.qml  HomeMenuBar.qml  HomeToolBar.qml  PresetsWidget.qml  ProcessorsWidget.qml  SessionControlsWidget.qml  SourcePreviewWidget.qml  SourcesWidget.qml
src/app/components/docking/: CMakeLists.txt  DockGroup.qml  DockOverlay.qml  DockPanel.qml  DockRoot.qml  DockRow.qml  DockRowInsertOverlay.qml  DockZoneOverlay.qml  Docking.qml  FloatingDock.qml
src/app/components/plugins/: CMakeLists.txt  DialogWindow.qml
src/app/controllers/AppActionController/: action_containers.h  appactioncontroller.cpp  appactioncontroller.h
src/app/controllers/UiSettingsController/: uisettingscontroller.cpp  uisettingscontroller.h
src/app/data/: required_actions.hpp
src/app/dialogs/: AddProcessorDialog.qml  AddSourceDialog.qml  CMakeLists.txt  SessionPropertiesDialog.qml
src/app/dialogs/AddMountDialog/: addmountdialog.cpp  addmountdialog.h  addmountdialog.ui
src/app/dialogs/AddProcessorDialog/: addprocessordialog.cpp  addprocessordialog.h
src/app/dialogs/AddSourceDialog/: addsourcedialog.cpp  addsourcedialog.h  addsourcedialog.ui
src/app/dialogs/AppPropertiesDialog/: apppropertiesdialog.cpp  apppropertiesdialog.h  apppropertiesdialog.ui
src/app/dialogs/AppSettingsDialog/: appsettingsdialog.cpp  appsettingsdialog.h  appsettingsdialog.ui
src/app/dialogs/PluginsDialog/: pluginsdialog.cpp  pluginsdialog.h  pluginsdialog.ui
src/app/dialogs/SessionPropertiesDialog/: sessionpropertiesdialog.cpp  sessionpropertiesdialog.h  sessionpropertiesdialog.ui
src/app/logic/actions/: CMakeLists.txt  GlobalActions.qml  PresetsActions.qml  ProcessorsActions.qml  SessionActions.qml  SourcesActions.qml
src/app/models/ElementTreeModel/: elementtreemodel.cpp  elementtreemodel.h
src/app/models/PluginListModel/: pluginlistmodel.cpp  pluginlistmodel.h
src/app/pages/: CMakeLists.txt  MainPage.qml
src/app/pages/MainPage/: mainpage.cpp  mainpage.h  mainpage.ui
src/app/styles/: CMakeLists.txt  Style.qml  styles.qss
src/app/styles/MSSDark/: Button.qml  CMakeLists.txt
src/app/widgets/CustomTitleBar/: customtitlebar.cpp  customtitlebar.h  customtitlebar.ui
src/app/widgets/DockableElementsManagerWidget/: dockableelementsmanagerwidget.cpp  dockableelementsmanagerwidget.h  dockableelementsmanagerwidget.ui
src/app/widgets/DockableSourcesManagerWidget/: dockableelementsmanagerwidget.cpp  dockableelementsmanagerwidget.h  dockableelementsmanagerwidget.ui
src/app/widgets/DockedMountControls/: dockedmountcontrols.cpp  dockedmountcontrols.h  dockedmountcontrols.ui
src/app/widgets/MountControlsWidget/: mountcontrolswidget.cpp  mountcontrolswidget.h  mountcontrolswidget.ui
src/app/widgets/PluginDetailsWidget/: plugindetailswidget.cpp  plugindetailswidget.h  plugindetailswidget.ui
src/app/widgets/PresetsWidget/: presetswidget.cpp  presetswidget.h  presetswidget.ui
src/app/widgets/PreviewContainerWidget/: previewcontainerwidget.cpp  previewcontainerwidget.h  previewcontainerwidget.ui
src/app/widgets/ProcessorsWidget/: processorswidget.cpp  processorswidget.h  processorswidget.ui
src/app/widgets/QDynamicGridWidget/: qdynamicgridwidget.cpp  qdynamicgridwidget.h  qdynamicgridwidget.ui
src/app/widgets/SessionControlsWidget/: sessioncontrolswidget.cpp  sessioncontrolswidget.h  sessioncontrolswidget.ui
src/app/widgets/SessionPropertiesWidget/: sessionpropertieswidget.cpp  sessionpropertieswidget.h  sessionpropertieswidget.ui
src/app/widgets/SourcePreviewWidget/: sourcepreviewwidget.cpp  sourcepreviewwidget.h  sourcepreviewwidget.ui
src/app/widgets/SourcePropertiesWidget/: sourcepropertieswidget.cpp  sourcepropertieswidget.h
src/app/widgets/SourcesWidget/: sourceswidget.cpp  sourceswidget.h  sourceswidget.ui
src/app/windows/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/core/: CMakeLists.txt  MSSCore.vcxproj  MSSCore.vcxproj.filters  msscore.cpp  msscore.h  msscore_global.h
src/core/controllers/BackendControllerBase/: backendcontrollerbase.cpp  backendcontrollerbase.h
src/core/controllers/ClipController/: clipcontroller.cpp  clipcontroller.h
src/core/controllers/MainController/: maincontroller.cpp  maincontroller.h
src/core/controllers/MountController/: mountcontroller.cpp  mountcontroller.h
src/core/controllers/PluginController/: plugincontroller.cpp  plugincontroller.h
src/core/controllers/PresetsController/: presetscontroller.cpp  presetscontroller.h
src/core/controllers/ProcessingController/: processingcontroller.cpp  processingcontroller.h
src/core/controllers/RecordingController/: recordingcontroller.cpp  recordingcontroller.h
src/core/controllers/RecordingSession/: recordingsession.cpp  recordingsession.h
src/core/controllers/SourceController/: sourcecontroller.cpp  sourcecontroller.h
src/core/include/: core_export.hpp
src/core/include/bins/: binbase.h  sourcebin.h  sourcebin.hpp
src/core/include/controllers/: backendcontrollerbase.h  backendcontrollerbase.hpp  clipcontroller.h  datapipelinecontroller.h  loggingcontroller.hpp  maincontroller.h  maincontroller.hpp  mountcontroller.h  mountcontroller.hpp  plugincontroller.h  (+12 more)
tests/app_tests/: CMakeLists.txt  setup.cpp  setup.h  tst_customtitlebar.qml
(+620 files in other folders)
