# Get all files
set(CONTROLLERS_FILES
    controllers/BackendControllerBase/backendcontrollerbase.h
    controllers/BackendControllerBase/backendcontrollerbase.cpp
    controllers/ClipController/clipcontroller.h
    controllers/ClipController/clipcontroller.cpp
    controllers/MainController/maincontroller.h
    controllers/MainController/maincontroller.cpp
    controllers/MountController/mountcontroller.h
    controllers/MountController/mountcontroller.cpp
    controllers/PluginController/plugincontroller.h
    controllers/PluginController/plugincontroller.cpp
    controllers/PresetsController/presetscontroller.h
    controllers/PresetsController/presetscontroller.cpp
    controllers/ProcessingController/processingcontroller.h
    controllers/ProcessingController/processingcontroller.cpp
    controllers/RecordingController/recordingcontroller.h
    controllers/RecordingController/recordingcontroller.cpp
    controllers/RecordingSession/recordingsession.h
    controllers/RecordingSession/recordingsession.cpp
    controllers/SourceController/sourcecontroller.h
    controllers/SourceController/sourcecontroller.cpp)

set(FEATURES_FILES
    features/mounts/Mount/mount.h
    features/mounts/Mount/mount.cpp
    features/processors/ProcessorBase/processorbase.h
    features/processors/ProcessorBase/processorbase.cpp
    features/sources/IClippableSource/iclippablesource.h
    features/sources/IClippableSource/ClipBufferBase/clipbufferbase.h
    features/sources/IConfigurableSource/iconfigurablesource.h
    features/sources/Source/source.h
    features/sources/Source/source.cpp
    features/sources/Source/SourcePreview/sourcepreview.h
    features/sources/Source/SourcePreview/sourcepreview.cpp
)

set(INTERFACES_FILES
    interfaces/capability/ianalogsource.h
    interfaces/capability/iaudiosource.h
    interfaces/capability/idatasource.h
    interfaces/capability/igpssource.h
    interfaces/capability/ivideosource.h
    interfaces/plugins/imountplugin.h
    interfaces/plugins/iprocessorplugin.h
    interfaces/plugins/isourceplugin.h
)

set(PRESETS_FILES
    presets/Preset/preset.h
    presets/sourcePreset/sourcepreset.h
)

# Create the Core QML module
qt_add_qml_module(${TARGET_CORE}
    URI ${TARGET_CORE}
    VERSION 1.0
    SHARED
    OUTPUT_DIRECTORY "${QT_QML_OUTPUT_DIRECTORY}/core"
    SOURCES
        ${CONTROLLERS_FILES}
        ${FEATURES_FILES}
        ${INTERFACES_FILES}
        ${PRESETS_FILES}
)

# CRITICAL: Make sure the autogenerated QML type registration file can find all headers
target_include_directories(${TARGET_CORE}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/BackendControllerBase
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/ClipController
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/MainController
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/MountController
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/PluginController
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/PresetsController
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/ProcessingController
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/RecordingController
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/RecordingSession
        ${CMAKE_CURRENT_SOURCE_DIR}/controllers/SourceController
        ${CMAKE_CURRENT_SOURCE_DIR}/features
        ${CMAKE_CURRENT_SOURCE_DIR}/features/mounts
        ${CMAKE_CURRENT_SOURCE_DIR}/features/mounts/Mount
        ${CMAKE_CURRENT_SOURCE_DIR}/features/processors
        ${CMAKE_CURRENT_SOURCE_DIR}/features/processors/ProcessorBase
        ${CMAKE_CURRENT_SOURCE_DIR}/features/sources
        ${CMAKE_CURRENT_SOURCE_DIR}/features/sources/IClippableSource
        ${CMAKE_CURRENT_SOURCE_DIR}/features/sources/IClippableSource/ClipBufferBase
        ${CMAKE_CURRENT_SOURCE_DIR}/features/sources/IConfigurableSource
        ${CMAKE_CURRENT_SOURCE_DIR}/features/sources/Source
        ${CMAKE_CURRENT_SOURCE_DIR}/features/sources/Source/SourcePreview
        ${CMAKE_CURRENT_SOURCE_DIR}/interfaces
        ${CMAKE_CURRENT_SOURCE_DIR}/interfaces/capability
        ${CMAKE_CURRENT_SOURCE_DIR}/interfaces/plugins
        ${CMAKE_CURRENT_SOURCE_DIR}/presets
        ${CMAKE_CURRENT_SOURCE_DIR}/presets/Preset
        ${CMAKE_CURRENT_SOURCE_DIR}/presets/sourcePreset
        ${CMAKE_CURRENT_SOURCE_DIR}/yolo_models
)

# Link Qt libraries
target_link_libraries(${TARGET_CORE}
    PUBLIC 
        Qt6::Core
        Qt6::Multimedia
        Qt6::Qml
        Qt6::Concurrent
)

# Make the QML module available to importers
set_target_properties(${TARGET_CORE} PROPERTIES
    WINDOWS_EXPORT_ALL_SYMBOLS ON
    QT_QML_MODULE_URI ${TARGET_CORE}
    QT_QML_MODULE_VERSION 1.0
)
